--- a/Section 17/278/package.json
+++ b/Section 17/278/package.json
@@ -7,5 +7,8 @@
   },
   "author": "Lirone Fitoussi",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "lodash-es": "^4.17.21"
+  }
 }
