--- a/Section 18/package.json
+++ b/Section 18/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "core-js": "^3.38.0",
+    "fractional": "^1.0.0",
     "fracty": "^1.0.9",
     "lmdb": "^3.0.13",
     "regenerator-runtime": "^0.14.1"
